--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -12,6 +12,8 @@
     <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
 
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootstrap/3.2.0/dist/css/bootstrap.min.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/glyphiconshalflingsregular.css" property="">
+    <link rel="stylesheet" href="{{ PathBase }}/Sphere/Client/Style/glyphiconsregular.css" property="">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Bootflat/2.0.4/bootflat/css/bootflat.min.css" property="">
     <link rel="stylesheet" href="{{ PathBase }}/Library/Twitter.Typeahead.Bootstrap/1.0.0/typeaheadjs.css" property="">
     <link rel="stylesheet"
