Code Review: Quality

--- a/Sphere/Application/Gatekeeper/Frontend/Authentication/SignIn/SignInToken.twig
+++ b/Sphere/Application/Gatekeeper/Frontend/Authentication/SignIn/SignInToken.twig
@@ -24,7 +24,7 @@
     <div class="form-group {{ CredentialKeyGroup }}">
         <div class="input-group">
                         <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-certificate"></span>
+                            <span class="glyphicons glyphicons-keys"></span>
                         </span>
             <input type="password" class="form-control" name="CredentialKey" placeholder="YubiKey">
             {{ CredentialKeyFeedbackIcon }}
