--- a/Sphere/Application/Management/Frontend/PersonalData/Form/Gender.twig
+++ b/Sphere/Application/Management/Frontend/PersonalData/Form/Gender.twig
@@ -12,11 +12,9 @@
     </div>
 </div>
 <script type="text/javascript">
-    require( ['ModSelecter'], function()
-        {
-            var guiSelect = jQuery( 'select[name="PersonGender"]' );
-            guiSelect.find( 'option[value="{{ PersonGenderValue }}"]' ).attr( 'selected', 'selected' );
-            guiSelect.selecter();
-        }
-    );
+
+    var guiSelect = jQuery( 'select[name="PersonGender"]' );
+    guiSelect.find( 'option[value="{{ PersonGenderValue }}"]' ).attr( 'selected', 'selected' );
+    guiSelect.ModSelecter();
+
 </script>
