--- a/Sphere/Application/Management/Frontend/PersonalData/Form/Nationality.twig
+++ b/Sphere/Application/Management/Frontend/PersonalData/Form/Nationality.twig
@@ -14,40 +14,9 @@
 </div>
 
 <script type="text/javascript">
-
-    require( ['ModCompleter'], function()
-        {
-            var data = [
-                'Deutsch'
-            ];
-
-            // constructs the suggestion engine
-            var states = new Bloodhound( {
-                datumTokenizer: Bloodhound.tokenizers.obj.whitespace( 'value' ),
-                queryTokenizer: Bloodhound.tokenizers.whitespace,
-                // `states` is an array of state names defined in "The Basics"
-                local: $.map( data, function( state )
-                {
-                    return {value: state};
-                } )
-            } );
-
-            // kicks off the loading/processing of `local` and `prefetch`
-            states.initialize();
-
-            jQuery( '.Typeahead_Nationality' ).typeahead( {
-                    hint: true,
-                    highlight: true,
-                    minLength: 1
-                },
-                {
-                    name: 'states',
-                    displayKey: 'value',
-                    // `ttAdapter` wraps the suggestion engine in an adapter that
-                    // is compatible with the typeahead jQuery plugin
-                    source: states.ttAdapter()
-                } );
-
-        }
-    );
+    jQuery( '.Typeahead_Nationality' ).ModCompleter( {
+        data: [
+            'Deutsch'
+        ]
+    } );
 </script>
