--- a/Sphere/Client/Component/Element/Repository/Content/Stage.twig
+++ b/Sphere/Client/Component/Element/Repository/Content/Stage.twig
@@ -3,12 +3,14 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 col-xs-12">
-            <h3>{{ StageTitle }}
+            <h3 style="border-bottom: 1px solid silver; padding-bottom: 2px;">{{ StageTitle }}
                 <small>{{ StageDescription }}</small>
             </h3>
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12 text-left">
-                    <div>{{ StageMessage }}</div>
+                    {% if StageMessage is not empty %}
+                        <div>{{ StageMessage }}</div>
+                    {% endif %}
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-6 visible-sm visible-md visible-lg text-right">
                     {% if StageMenu is not empty %}
@@ -20,7 +22,9 @@
                     {% endif %}
                 </div>
             </div>
-            <hr/>
+            {% if (StageMessage is not empty) or (StageMenu is not empty) %}
+                <hr/>
+            {% endif %}
             {{ StageContent }}
         </div>
         <div class="col-md-1"></div>
