--- a/Sphere/Client/Style/Style.css
+++ b/Sphere/Client/Style/Style.css
@@ -140,8 +140,8 @@ span.twitter-typeahead .tt-dropdown-menu {
 .pagination > .active > span:focus,
 .pagination > .active > span:hover {
     color: #fff;
-    background-color: #428bca;
-    border-color: #428bca;
+    background-color: #3bafda;
+    border-color: #3bafda;
 }
 
 .pagination > .disabled > a,
@@ -152,14 +152,97 @@ span.twitter-typeahead .tt-dropdown-menu {
 .pagination > .disabled > span:hover {
     color: #777;
     background-color: #fff;
-    border-color: #ccd1d9;
+    border-color: #aab2bd;
+}
+
+.pagination > li > a {
+    color: #3bafda;
+    border-color: #aab2bd;
 }
 
 .pagination > li > a:focus,
 .pagination > li > a:hover,
 .pagination > li > span:focus,
 .pagination > li > span:hover {
-    color: #2a6496;
+    color: #3bafda;
     background-color: #eee;
-    border-color: #ddd;
+    border-color: #aab2bd;
+}
+
+.navbar {
+    border: 0;
+}
+
+.navbar-application {
+    background-color: #eee;
+    border-color: #eee;
+}
+
+.navbar-application .navbar-text, .navbar-application .navbar-nav > li > a {
+    color: #777;
+}
+
+.navbar-application .navbar-nav > li > a:hover, .navbar-application .navbar-nav > li > a:focus {
+    color: #4fc1e9;
+}
+
+.navbar-application .navbar-nav > .active > a, .navbar-application .navbar-nav > .active > a:hover, .navbar-application .navbar-nav > .active > a:focus {
+    color: white;
+    background-color: #777;
+}
+
+.navbar-application .btn-link[disabled]:hover, fieldset[disabled] .navbar-application .btn-link:hover, .navbar-application .btn-link[disabled]:focus, fieldset[disabled] .navbar-application .btn-link:focus, .navbar-application .navbar-nav > .disabled > a, .navbar-application .navbar-nav > .disabled > a:hover, .navbar-application .navbar-nav > .disabled > a:focus {
+    color: #666;
+    background-color: transparent;
+}
+
+.navbar-application .navbar-toggle {
+    background-color: #ccc;
+    border-color: #ccc;
+}
+
+.navbar-application .navbar-toggle:hover, .navbar-application .navbar-toggle:focus {
+    background-color: #bbb;
+    border-color: #bbb;
+}
+
+.navbar-application .navbar-toggle .icon-bar {
+    background-color: #666;
+}
+
+.navbar-application .navbar-collapse, .navbar-application .navbar-form {
+    border-color: #777;
+}
+
+.navbar-application .navbar-nav > .open > a, .navbar-application .navbar-nav > .open > a:hover, .navbar-application .navbar-nav > .open > a:focus {
+    color: white;
+    background-color: black;
+}
+
+@media (max-width: 767px) {
+    .navbar-application .navbar-nav > li > a:hover, .navbar-application .navbar-nav > li > a:focus {
+        color: white;
+        background-color: #777;
+    }
+
+    .navbar-application .navbar-nav .open .dropdown-menu > .divider {
+        background-color: #777;
+    }
+
+    .navbar-application .navbar-nav .open .dropdown-menu > li > a {
+        color: #8c8c8c;
+    }
+
+    .navbar-application .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-application .navbar-nav .open .dropdown-menu > li > a:focus, .navbar-application .navbar-nav .open .dropdown-menu > .active > a, .navbar-application .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-application .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: white;
+        background-color: black;
+    }
+
+    .navbar-application .navbar-nav .open .dropdown-menu > .dropdown-header {
+        color: #bfbfbf;
+    }
+
+    .navbar-application .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-application .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-application .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+        color: #666;
+    }
 }
