Code Review: Quality

--- a/Sphere/Client/Component/Element/Repository/Content/Stage.twig
+++ b/Sphere/Client/Component/Element/Repository/Content/Stage.twig
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 col-xs-12">
-            <h3 style="border-bottom: 1px solid silver; padding-bottom: 2px;">{{ StageTitle }}
+            <h3>{{ StageTitle }}
                 <small>{{ StageDescription }}</small>
             </h3>
             <div class="row">
