--- a/Sphere/Application/System/Frontend/Consumer/Setting/CreateConsumer.twig
+++ b/Sphere/Application/System/Frontend/Consumer/Setting/CreateConsumer.twig
@@ -28,7 +28,7 @@
     </div>
 </form>
 <hr/>
-<table id="ConsumerList" class="table table-striped table-bordered">
+<table id="TableConsumerList" class="table table-striped table-bordered">
     <thead>
     <tr>
         <th>Name des Mandanten</th>
@@ -50,7 +50,7 @@
 <script>
     Client.Use( 'ModTable', function()
         {
-            jQuery( '#ConsumerList' ).ModTable();
+            jQuery( '#TableConsumerList' ).ModTable();
         }
     );
 </script>
