--- a/Sphere/Application/System/Service/Token/Certification.twig
+++ b/Sphere/Application/System/Service/Token/Certification.twig
@@ -20,9 +20,8 @@
 <h3>Zertifizierte Hardware-Schlüssel
     <small>YubiKey</small>
 </h3>
-<hr/>
 
-<table class="table">
+<table id="TableTokenList" class="table table-bordered">
     <thead>
     <tr>
         <th>Geräte-ID</th>
@@ -42,3 +41,11 @@
     {% endfor %}
     </tbody>
 </table>
+
+<script>
+    Client.Use( 'ModTable', function()
+        {
+            jQuery( '#TableTokenList' ).ModTable();
+        }
+    );
+</script>
