--- a/Sphere/Application/System/Frontend/Authorization/Access/Access.twig
+++ b/Sphere/Application/System/Frontend/Authorization/Access/Access.twig
@@ -32,7 +32,7 @@
     {% for Access in AccessList %}
         <tr>
             <td>{{ Access.Id }}</td>
-            <td class="text-uppercase">{{ Access.Name }}</td>
+            <td>{{ Access.Name }}</td>
         </tr>
     {% endfor %}
     </tbody>
