--- a/Sphere/Application/System/Frontend/Authorization/Privilege/Privilege.twig
+++ b/Sphere/Application/System/Frontend/Authorization/Privilege/Privilege.twig
@@ -32,7 +32,7 @@
     {% for AccessPrivilege in AccessPrivilegeList %}
         <tr>
             <td>{{ AccessPrivilege.Id }}</td>
-            <td class="text-uppercase">{{ AccessPrivilege.Name }}</td>
+            <td>{{ AccessPrivilege.Name }}</td>
         </tr>
     {% endfor %}
     </tbody>
