--- a/Sphere/Application/System/Frontend/Authorization/Right/Right.twig
+++ b/Sphere/Application/System/Frontend/Authorization/Right/Right.twig
@@ -32,7 +32,7 @@
     {% for AccessRight in AccessRightList %}
         <tr>
             <td>{{ AccessRight.Id }}</td>
-            <td class="text-uppercase">{{ AccessRight.Route }}</td>
+            <td>{{ AccessRight.Route }}</td>
         </tr>
     {% endfor %}
     </tbody>
