--- a/Sphere/Application/System/Frontend/Authorization/Role/Role.twig
+++ b/Sphere/Application/System/Frontend/Authorization/Role/Role.twig
@@ -32,7 +32,7 @@
     {% for AccountRole in AccountRoleList %}
         <tr>
             <td>{{ AccountRole.Id }}</td>
-            <td class="text-uppercase">{{ AccountRole.Name }}</td>
+            <td>{{ AccountRole.Name }}</td>
         </tr>
     {% endfor %}
     </tbody>
