--- a/Sphere/Application/Gatekeeper/Frontend/Authentication/SignIn/SignInSwitch.twig
+++ b/Sphere/Application/Gatekeeper/Frontend/Authentication/SignIn/SignInSwitch.twig
@@ -5,4 +5,6 @@
             class="glyphicon glyphicon-lock"></span> Lehrer</a>
     <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/Management" class="btn btn-primary"><span
             class="glyphicon glyphicon-lock"></span> Verwaltung</a>
+    <a href="{{ UrlBase }}/Sphere/Gatekeeper/SignIn/System" class="btn btn-danger"><span
+            class="glyphicon glyphicon-lock"></span> System</a>
 </div>
