--- a/Sphere/Application/Management/Frontend/PersonalData/Staff/PersonList.twig
+++ b/Sphere/Application/Management/Frontend/PersonalData/Staff/PersonList.twig
@@ -24,5 +24,9 @@
 </table>
 
 <script>
-    jQuery( "#PersonList" ).ModTable();
+    Client.Use( 'ModTable', function()
+        {
+            jQuery( "#PersonList" ).ModTable();
+        }
+    );
 </script>
