--- a/Sphere/Common/AbstractFrontend/Form/Structure/FormDefault.twig
+++ b/Sphere/Common/AbstractFrontend/Form/Structure/FormDefault.twig
@@ -15,9 +15,13 @@
             </div>
         {% endfor %}
     {% endfor %}
+
     <div class="form-group">
-        <div class="input-group">
-            <button type="submit" class="btn btn-primary">{{ FormSubmit }}</button>
+        <div class="btn-group">
+            {% for FormButton in FormButtonList %}
+                {{ FormButton }}
+                {#<button type="submit" class="btn btn-primary">{{ FormSubmit }}</button>#}
+            {% endfor %}
         </div>
     </div>
 </form>
