--- a/Sphere/Application/System/Frontend/Consumer/Setting/CreateConsumer.twig
+++ b/Sphere/Application/System/Frontend/Consumer/Setting/CreateConsumer.twig
@@ -28,7 +28,7 @@
     </div>
 </form>
 <hr/>
-<table id="TableConsumerList" class="table table-striped table-bordered">
+<table id="TableConsumerList" class="table table-condensed table-bordered small">
     <thead>
     <tr>
         <th>Name des Mandanten</th>
