--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -140,9 +140,7 @@
     </div>
 </div>
 <script>
-    Client.Use( 'ModAlways', function()
-    {
-    } );
+    Client.Use( 'ModAlways' );
 </script>
 </body>
 </html>
