--- a/Sphere/Common/AbstractFrontend/Address/Structure/AddressDefault.twig
+++ b/Sphere/Common/AbstractFrontend/Address/Structure/AddressDefault.twig
@@ -1,15 +1,17 @@
-{{ Address.getStreetName }}
-{{ Address.getStreetNumber }}
-{{ Address.getPostOfficeBox }}
-<br/>
-{% set City = Address.getTblAddressCity %}
-{% if(City) %}
-    {{ City.getCode }}
-    {{ City.getName }}
-    {{ City.getDistrict }}
-{% endif %}
-<br/>
-{% set State = Address.getTblAddressState %}
-{% if(State) %}
-    {{ State.getName }}
+{% if(Address) %}
+    {{ Address.getStreetName }}
+    {{ Address.getStreetNumber }}
+    {{ Address.getPostOfficeBox }}
+    <br/>
+    {% set City = Address.getTblAddressCity %}
+    {% if(City) %}
+        {{ City.getCode }}
+        {{ City.getName }}
+        {{ City.getDistrict }}
+    {% endif %}
+    <br/>
+    {% set State = Address.getTblAddressState %}
+    {% if(State) %}
+        {{ State.getName }}
+    {% endif %}
 {% endif %}
