--- a/Sphere/Common/Frontend/Table/Structure/TableInteractive.twig
+++ b/Sphere/Common/Frontend/Table/Structure/TableInteractive.twig
@@ -1,7 +1,7 @@
 {% if( Title is not empty ) %}
     {{ Title }}
 {% endif %}
-<table id="{{ Hash }}" class="table table-bordered table-condensed small" style="margin: auto;">
+<table id="{{ Hash }}" class="table table-bordered table-condensed small">
     {% for GridTableHead in GridHeadList %}
         <thead>
         {% for GridTableRow in GridTableHead.getRowList %}
