--- a/Sphere/Client/Style/Style.css
+++ b/Sphere/Client/Style/Style.css
@@ -28,12 +28,18 @@ hr {
 
 h3 {
     border-bottom: 1px solid silver;
-    padding-bottom: 2px;
+    padding-bottom: 3px;
 }
 
 h4 {
     border-bottom: 1px solid #dadada;
-    padding-bottom: 1px;
+    padding-bottom: 2px;
+}
+
+h5 {
+    padding: 1px;
+    margin: 1px;
+    font-size: inherit;
 }
 
 /*.glyphicon.glyphicon-yubikey:before {*/
