--- a/Sphere/Common/Frontend/Form/Element/InputDate.twig
+++ b/Sphere/Common/Frontend/Form/Element/InputDate.twig
@@ -12,7 +12,7 @@
                placeholder="{{ ElementPlaceholder }}"
                data-date-format="DD.MM.YYYY" data-date-language="de" data-date-pickTime="false"
                data-bv-date-format="DD.MM.YYYY"
-               value="{{ ElementValue }}"/>
+               value="{{ ElementValue }}" autocomplete="off"/>
 
         {{ ElementFeedbackIcon }}
         {% if( ElementIcon is not empty ) %}
