Code Review: Documentation

--- a/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Shell/Screen.twig
@@ -39,7 +39,7 @@
                     </dd>
                 </dl>
                 <dl class="footer-nav">
-                    <dt class="nav-title">Applikation</dt>
+                    <dt class="nav-title">Anwendung</dt>
                     <dd class="nav-item">
                         <a href="{{ PathBase }}/Client/Sphere/Assistance/Impressum">Impressum</a>
                     </dd>
@@ -50,7 +50,10 @@
                 <dl class="footer-nav">
                     <dt class="nav-title">Hilfe</dt>
                     <dd class="nav-item">
-                        <a href="{{ PathBase }}/Client/Sphere/Assistance">Dokumentation</a>
+                        <a href="{{ PathBase }}/Client/Sphere/Assistance">Online Hilfe</a>
+                    </dd>
+                    <dd class="nav-item">
+                        <a href="http://kwzwickau.github.io/KREDA-Sphere/">Api Dokumentation</a>
                     </dd>
                 </dl>
             </div>
