--- a/Sphere/Common/Frontend/Button/Element/ButtonDangerLink.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonDangerLink.twig
@@ -1,1 +1,1 @@
-<a href="{{ UrlBase }}/Sphere/{{ ElementPath }}" class="btn btn-danger">{{ ElementIcon }} {{ ElementName }}</a>
+<a href="{{ UrlBase }}/Sphere/{{ ElementPath }}" class="btn btn-danger">{{ ElementIcon }}&nbsp; {{ ElementName }}</a>
