--- a/Sphere/Common/Frontend/Button/Element/ButtonPrimaryLink.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonPrimaryLink.twig
@@ -1,1 +1,1 @@
-<a href="{{ UrlBase }}/Sphere/{{ ElementPath }}" class="btn btn-primary">{{ ElementIcon }} {{ ElementName }}</a>
+<a href="{{ UrlBase }}/Sphere/{{ ElementPath }}" class="btn btn-primary">{{ ElementIcon }}&nbsp; {{ ElementName }}</a>
