Code Review: Refactor (Abstract Frontend)

--- a/Sphere/Application/System/Frontend/Authorization/Summary/Summary.twig
+++ b/Sphere/Application/System/Frontend/Authorization/Summary/Summary.twig
@@ -5,8 +5,8 @@
     <thead>
     <tr>
         <th style="width: 1%; white-space: nowrap;">Id</th>
-        <th style="width: 15%; white-space: nowrap;">Role</th>
-        <th></th>
+        <th style="width: 15%; white-space: nowrap;">Rollen</th>
+        <th>Zusammensetzung</th>
     </tr>
     </thead>
     <tbody>
@@ -19,8 +19,8 @@
                     <thead>
                     <tr>
                         <th style="width: 1%; white-space: nowrap;">Id</th>
-                        <th style="width: 25%;">Access</th>
-                        <th></th>
+                        <th style="width: 25%;">Zugriffslevel</th>
+                        <th>Zusammensetzung</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -33,8 +33,8 @@
                                     <thead>
                                     <tr>
                                         <th style="width: 1%; white-space: nowrap;">Id</th>
-                                        <th style="width: 35%;">Privilege</th>
-                                        <th></th>
+                                        <th style="width: 35%;">Privilegien</th>
+                                        <th>Zusammensetzung</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -48,7 +48,7 @@
                                                     <thead>
                                                     <tr>
                                                         <th style="width: 1%; white-space: nowrap;">Id</th>
-                                                        <th style="width: 99%;">Route</th>
+                                                        <th style="width: 99%;">Rechte</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
