Code Review: Refactor/Quality

--- a/Sphere/Common/Frontend/Form/Element/InputText.twig
+++ b/Sphere/Common/Frontend/Form/Element/InputText.twig
@@ -7,6 +7,11 @@
         <span class="input-group-addon">
             {{ ElementIcon }}
         </span>
+        {% if ElementPrefix is not empty %}
+            <span class="input-group-addon input-group-prefix">
+                {{ ElementPrefix }}
+            </span>
+        {% endif %}
         {% endif %}
         <input type="text" class="form-control" name="{{ ElementName }}" placeholder="{{ ElementPlaceholder }}"
                value="{{ ElementValue }}"/>
