--- a/Sphere/Common/Frontend/Form/Structure/FormDefault.twig
+++ b/Sphere/Common/Frontend/Form/Structure/FormDefault.twig
@@ -1,6 +1,6 @@
 <form {% if( Hash is not empty ) %}id="{{ Hash }}"{% endif %}
       action="{{ FormAction }}{% if( Hash is not empty ) %}#{{ Hash }}{% endif %}" method="post"
-      enctype="multipart/form-data">
+      enctype="multipart/form-data" autocomplete="off">
     {% for GridFormGroup in GridGroupList %}
         {% if( GridFormGroup.getTitle is not empty ) %}
             {{ GridFormGroup.getTitle }}
@@ -27,3 +27,15 @@
         </div>
     {% endif %}
 </form>
+{% if FormConfirm is not empty %}
+    <script type="text/javascript">
+        Client.Use( 'jQuery', function()
+        {
+            jQuery( "form#{{ Hash }}" ).submit( function( Event )
+            {
+                Event.stopImmediatePropagation();
+                return confirm( "{{ FormConfirm }}" );
+            } );
+        } )
+    </script>
+{% endif %}
