Update: Management (Person)

--- a/Sphere/Common/Frontend/Button/Element/ButtonSubmitDanger.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonSubmitDanger.twig
@@ -1,4 +1,4 @@
-<button type="submit" class="btn btn-danger">
+<button type="submit" class="btn btn-danger" name="Button[Submit]" value="{{ ElementName }}">
     {% if( ElementIcon is not empty ) %}
         {{ ElementIcon }}
     {% endif %}
