--- a/Sphere/Common/Frontend/Button/Element/ButtonSubmitSuccess.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonSubmitSuccess.twig
@@ -1,4 +1,4 @@
-<button type="submit" class="btn btn-success">
+<button type="submit" class="btn btn-success" name="Button[Submit]" value="{{ ElementName }}">
     {% if( ElementIcon is not empty ) %}
         {{ ElementIcon }}
     {% endif %}
