--- a/Sphere/Common/Frontend/Button/Element/ButtonSubmitPrimary.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonSubmitPrimary.twig
@@ -1,4 +1,4 @@
-<button type="submit" class="btn btn-primary">
+<button type="submit" class="btn btn-primary" name="Button[Submit]" value="{{ ElementName }}">
     {% if( ElementIcon is not empty ) %}
         {{ ElementIcon }}
     {% endif %}
