Research: Management (Person)

--- a/Sphere/Client/Style/Style.css
+++ b/Sphere/Client/Style/Style.css
@@ -30,11 +30,13 @@ hr {
 
 h3 {
     border-bottom: 1px solid silver;
+    padding-top: 3px;
     padding-bottom: 3px;
 }
 
 h4 {
     border-bottom: 1px solid #dadada;
+    padding-top: 3px;
     padding-bottom: 2px;
 }
 
