Code Review: Refactor/Quality/Performance

--- a/Sphere/Client/Component/Element/Repository/Content/Screen.twig
+++ b/Sphere/Client/Component/Element/Repository/Content/Screen.twig
@@ -59,7 +59,7 @@
             </div>
             <div class="footer-copyright text-center">
                 © 2014 - {{ "now"|date("Y") }} | Mandant: {{ PositionConsumer }} | Erstellt in {{ PositionRuntime }}
-                <div>
+                <div class="text-left">
                     <br/>
                     {{ PositionDebugger }}
                 </div>
