--- a/Sphere/Common/Frontend/Redirect.twig
+++ b/Sphere/Common/Frontend/Redirect.twig
@@ -1,7 +1,7 @@
 <div>
     <small>Sollten sie nicht automatisch weitergeleitet werden, klicken Sie bitte hier</small>
-    <br/>
-    <a href="{{ UrlBase }}{{ Route }}" class="btn btn-primary">Weiter</a>
+    <br/><br/>
+    <a href="{{ UrlBase }}{{ Route }}" class="btn btn-default">Weiter</a>
 </div>
 
 <br/>
