--- a/Sphere/Common/Frontend/Button/Element/ButtonLinkDanger.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonLinkDanger.twig
@@ -1,1 +1,1 @@
-<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-danger">{{ ElementIcon }}&nbsp; {{ ElementName }}</a>
+<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-danger">{{ ElementIcon }} {{ ElementName }}</a>
