--- a/Sphere/Common/Frontend/Button/Element/ButtonLinkSuccess.twig
+++ b/Sphere/Common/Frontend/Button/Element/ButtonLinkSuccess.twig
@@ -1,1 +1,1 @@
-<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-success">{{ ElementIcon }}&nbsp; {{ ElementName }}</a>
+<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-success">{{ ElementIcon }} {{ ElementName }}</a>
