--- a/Sphere/Client/Component/Element/Repository/Content/Stage.twig
+++ b/Sphere/Client/Component/Element/Repository/Content/Stage.twig
@@ -1,8 +1,8 @@
 <br/>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10 col-xs-12">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10 col-xs-12">
             <h3>{{ StageTitle }}
                 <small>{{ StageDescription }}</small>
             </h3>
@@ -27,7 +27,7 @@
             {% endif %}
             {{ StageContent }}
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-lg-1"></div>
     </div>
 </div>
 <br/>
