--- a/Sphere/Client/Frontend/Table/Type/TableVertical.twig
+++ b/Sphere/Client/Frontend/Table/Type/TableVertical.twig
@@ -1,7 +1,7 @@
 {% if( TableTitle is not empty ) %}
     {{ TableTitle }}
 {% endif %}
-<table class="table table-bordered table-condensed">
+<table class="table table-bordered table-condensed small">
     {% for TableBody in BodyList %}
         <tbody>
         {% for Index, TableRow in TableBody.getRow %}
